frontend/tests/cases/positive/interfaces/simple/interface-simple-22.gr
interface Simple a where
  simple : a -> a

data A = B | C

-- instance with guards
instance Simple A where
  simple B = B;
  | C = C
