frontend/tests/cases/negative/simple/name-clash-data-constr.gr
data Type1 = A | B | C

data Type2 = A

data Type3 where
  A : Type3;
  B : Type3